[tool.poetry]
name = "providenie"
version = "0.1.0"
description = "Проект телеграм-бота, который позволяет разгрузить кураторов/координаторов фонда Провидение."
authors = [
    "Карев Виталий", "Дарья Малышева", "Андрей Распутин", "Данилов Николай",
    "Кузнецов Дмитрий", "Моторин Антон", "Курятников Александр",
    "Ирина Финатова", "Юлий Митряшкин", "Яна Денисова"
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^0.21.0"
python-telegram-bot = "20.0b0"
pydantic = {extras = ["email"], version = "^1.10.6"}
py3-validate-email = "1.0.5.post2"
fastapi = "^0.115.4"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
alembic = "^1.13.3"
uvicorn = "^0.32.0"
asyncpg= "^0.30.0"
bcrypt = "^4.1.2"
pyjwt = "^2.8.0"
passlib = {extras = ["bcrypt"], version="^1.7.4"}
python-multipart = "^0.0.17"

[tool.poetry.group.dev.dependencies]
ruff = "0.7.1"
pre-commit = "4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
